zefin-middleware-kyc/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    konghq.com/plugins: prometheus
  name: zefin-middleware-kyc
  namespace: zefin
spec:
  tls:
  - secretName: zefin-middleware-kyc-tls
    hosts:
    - zefin-staging.zebrands.mx
  rules:
    - host: zefin-staging.zebrands.mx
      http:
        paths:        
        - path: /v1/verifications
          pathType: Prefix
          backend:
            service:
              name: zefin-middleware-kyc
              port:
                number: 80
